--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,12 +2,14 @@ version: '3'
 services:
   rabbitmq:
     image: "rabbitmq:3.8.2-alpine"
+    container_name: rabit
     ports:
       - "5672:5672"
     volumes:
       - ./rabbitmq-data:/var/lib/rabbitmq
   postgresql:
     image: "postgres:11.2-alpine"
+    container_name: postgresql
     ports:
       - "5432:5432"
     environment:
@@ -18,6 +20,7 @@ services:
       - ./postgresql-data:/var/lib/postgresql/
   redis:
     image: "redis:5.0.7-alpine"
+    container_name: redis
     ports:
     - "6379:6379"
   # NestJS APPs are defined now
@@ -28,38 +31,38 @@ services:
     restart: always
     environment:
     - REDIS_URL=redis://redis
-    - RMQ_URL=amqp://rabbitmq?connection_attempts=5&retry_delay=5
+    - RMQ_URL=amqp://rabit
     depends_on:
     - redis
     - rabbitmq
-  # userapi:
-  #   build: ./user-service
-  #   ports:
-  #   - "4001:3000"
-  #   restart: always
-  #   environment:
-  #     NODE_ENV: development
-  #     DATABASE_URL: postgres://nestjs:bc@postgresql:5432/tc_users
-  #   depends_on:
-  #   - webapi
-  #   - postgresql
-  # walletapi:
-  #   build: ./wallet-service
-  #   ports:
-  #   - "4002:3000"
-  #   environment:
-  #   - REDIS_URL=redis://redis
-  #   restart: always
-  #   depends_on:
-  #   - webapi
-  #   - redis
-  # logapi:
-  #   build: ./log-service
-  #   ports:
-  #   - "4003:3000"
-  #   environment:
-  #   - RMQ_URL=amqp://rabbitmq?connection_attempts=5&retry_delay=5
-  #   restart: always
-  #   depends_on:
-  #   - webapi
-  #   - rabbitmq
+  userapi:
+    build: ./user-service
+    ports:
+    - "4001:3000"
+    restart: always
+    environment:
+      NODE_ENV: development
+      DATABASE_URL: postgres://nestjs:bc@postgresql:5432/tc_users
+    depends_on:
+    - webapi
+    - postgresql
+  walletapi:
+    build: ./wallet-service
+    ports:
+    - "4002:3000"
+    environment:
+    - REDIS_URL=redis://redis
+    restart: always
+    depends_on:
+    - webapi
+    - redis
+  logapi:
+    build: ./log-service
+    ports:
+    - "4003:3000"
+    environment:
+    - RMQ_URL=amqp://rabit
+    restart: always
+    depends_on:
+    - webapi
+    - rabbitmq
